Source/WebCore/accessibility/AccessibilityNodeObject.h
@@ -123,6 +123,7 @@ public:
 
     unsigned hierarchicalLevel() const override;
     String textUnderElement(AccessibilityTextUnderElementMode = AccessibilityTextUnderElementMode()) const override;
+    String accessibilityDescriptionForChildren() const;
     String accessibilityDescription() const override;
     String helpText() const override;
     String title() const override;
